js/js.translator/testData/incremental/invalidation/unicodeSerializationAndDeserialization/lib1/l1.1.kt
fun foo() = "\uDB6A"
